// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Favorite matches snapshot - Add state 1`] = `
<div
  className="favorite-container"
  onClick={[Function]}
  role="button"
  style={
    Object {
      "pointerEvents": "inherit",
    }
  }
  tabIndex="0"
  title="Add to Favorites"
>
  <FontAwesome
    name="star-o"
  />
   
  Favorite
</div>
`;

exports[`Favorite matches snapshot - Remove state 1`] = `
<div
  className="favorite-container"
  onClick={[Function]}
  role="button"
  style={
    Object {
      "pointerEvents": "inherit",
    }
  }
  tabIndex="0"
  title="Remove from Favorites"
>
  <FontAwesome
    name="star"
  />
   
  Remove
</div>
`;
